--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                   <p>
                     روی این پروژه خیلی تمرکز کردم و سعی کردم ان را به بهترین شکل
                     در بیارم. بر خلاف بقیه نمونه کار ها , این نمونه کار چند صفحه
-                    ای است و میخواهم ان بیشتر و بیشتر کنم , ولی بخاطر مدرسه وقت
+                    ای هست و میخواهم ان بیشتر و بیشتر کنم , ولی بخاطر مدرسه وقت
                     فراقت زیادی ندارم ولی در روز های اینده انشاء الله ان را کامل
                     خواهم کرد
                   </p>
