--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="styles/main.css" />
   </head>
   <body>
     <header>
@@ -20,10 +20,10 @@
           <div class="aboutMe">
             <ul>
               <li>
-                <a href="#">همه ی نمونه کار ها</a>
+                <a href="pages/allSites/">همه ی سایت ها</a>
               </li>
               <li>
-                <a href="#">درباره من</a>
+                <a href="pages/aboutMe/">درباره من</a>
               </li>
             </ul>
           </div>
@@ -36,7 +36,7 @@
           <div class="content">
             <article>
               <div class="title">
-                <h1>نمونه کار ها</h1>
+                <h1>چند تا نمونه کار</h1>
               </div>
               <section class="work1">
                 <div class="welcomeContents">
@@ -106,20 +106,20 @@
             <aside>
               <div class="sites">
                 <div class="item">
-                  <a href="#">
-                    <img src="assets/images/gameShop.png" alt="xxx" />
+                  <a target="_blank" href="https://gameshop1402.netlify.app">
+                    <img src="assets/images/v_s.png" alt="xxx" />
                   </a>
                   <span>بیشتر بخوانید</span>
                 </div>
                 <div class="item">
-                  <a href="#">
+                  <a target="_blank" href="https://pelazio.netlify.app">
                     <img src="assets/images/pelazio.png" alt="xxx" />
                   </a>
                   <span>بیشتر بخوانید</span>
                 </div>
                 <div class="item">
-                  <a href="#">
-                    <img src="assets/images/v_s.png" alt="xxx" />
+                  <a target="_blank" href="https://v-s.netlify.app">
+                    <img src="assets/images/gameShop.png" alt="xxx" />
                   </a>
                   <span>بیشتر بخوانید</span>
                 </div>
