--- a/pages/aboutMe/index.html
+++ b/pages/aboutMe/index.html
@@ -1,10 +1,83 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa" dir="rtl">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../../styles/aboutMe.css" />
-    <title>Document</title>
+    <title>درباره من</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <section>
+        <div class="container">
+          <nav class="siteURL">
+            <ul>
+              <li><a href="../../">خانه</a></li>
+              <li>
+                <span>/</span>
+              </li>
+              <li>
+                <span>درباره من</span>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </section>
+    </header>
+    <main>
+      <section>
+        <div class="container">
+          <div class="mySkils">
+            <h1>سطح من</h1>
+            <p>HTML , CSS , SCSS , JAVASCRIPT , BOOTSTRAP</p>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <section>
+        <div class="container">
+          <div class="aboutUs">
+            <div class="contactUs">
+              <span>
+                <i class="fa fa-contact-card"></i>
+                شما میتوانید با من در ارتباط باشید
+                <i class="fa fa-contact-card"></i>
+              </span>
+              <span>
+                <i class="fa fa-phone"></i>
+                شماره تماس :
+                <a href="tel:+989212978638">+989212978638</a>
+              </span>
+              <span>
+                <i class="fa-solid fa-mail-reply"></i>
+                ایمیل :
+                <a href="mailTo:hosseinderees7@gmail.com">
+                  hosseinderees7@gmail.com
+                </a>
+              </span>
+            </div>
+            <div class="otherSites">
+              <span>همچنین ببینید</span>
+              <ul>
+                <li>
+                  <a target="_blank" href="https://v-snetlify.app">V S</a>
+                </li>
+                <li>
+                  <a target="_blank" href="https://pelazionetlify.app"
+                    >Pelazio</a
+                  >
+                </li>
+                <li>
+                  <a target="_blank" href="https://gameshopnetlify.app"
+                    >Game shop</a
+                  >
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+    </footer>
+  </body>
 </html>
