--- a/pages/allSites/index.html
+++ b/pages/allSites/index.html
@@ -38,7 +38,9 @@
             <h1>همه ی سایت ها</h1>
           </div>
           <nav class="contents">
-            <h2>فهرست سایت ها</h2>
+            <div class="dropDown">
+              <h2>فهرست سایت ها</h2>
+            </div>
             <ul>
               <li>
                 <a href="#mysite">سایت mysite</a>
@@ -268,5 +270,6 @@
         </div>
       </section>
     </footer>
+    <script src="../../scripts/allSites.js"></script>
   </body>
 </html>
