--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                   </p>
                 </div>
                 <div class="v_sImage">
-                  <a href="#">
+                  <a target="_blank" href="https://v-snetlify.app">
                     <img src="assets/images/v_s.png" alt="xxx" />
                   </a>
                 </div>
@@ -64,7 +64,7 @@
               </section>
               <section class="work2">
                 <div class="pelazioImage">
-                  <a href="#">
+                  <a target="_blank" href="https://pelazio.netlify.app">
                     <img src="assets/images/pelazio.png" alt="xxx" />
                   </a>
                 </div>
@@ -84,7 +84,7 @@
               </section>
               <section class="work3">
                 <div class="v_sImage">
-                  <a href="#">
+                  <a target="_blank" href="https://gameshop1402.netlify.app">
                     <img src="assets/images/gameShop.png" alt="xxx" />
                   </a>
                 </div>
@@ -156,13 +156,17 @@
               <span>همچنین ببینید</span>
               <ul>
                 <li>
-                  <a href="https://v-snetlify.app">V S</a>
+                  <a target="_blank" href="https://v-snetlify.app">V S</a>
                 </li>
                 <li>
-                  <a href="https://pelazionetlify.app">Pelazio</a>
+                  <a target="_blank" href="https://pelazionetlify.app"
+                    >Pelazio</a
+                  >
                 </li>
                 <li>
-                  <a href="https://gameshopnetlify.app">Game shop</a>
+                  <a target="_blank" href="https://gameshopnetlify.app"
+                    >Game shop</a
+                  >
                 </li>
               </ul>
             </div>
@@ -170,6 +174,6 @@
         </div>
       </section>
     </footer>
-    <script src="scripts/script.js"></script>
+    <script src="scripts/main.js"></script>
   </body>
 </html>
